--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -19,8 +19,32 @@
 }
 
 .container{
-    align-items: center;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.pagi {
+    cursor: pointer;
+
+}
+.pagi1 {
+    cursor: pointer;
+}
+
+.button {
+    color: var(--textColor);
+    background-color: var(--softBg);
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    margin: 0 5px 70px;
+    cursor: pointer;
+
+}
+
+.button:disabled {
+    cursor: not-allowed;
 }
 
 
