--- a/src/app/blog/blogPage.module.css
+++ b/src/app/blog/blogPage.module.css
@@ -1,5 +1,5 @@
 .title{
-    background-color: coral;
+    background-color: var(--softBg);
     color: white;
     padding: 5px 10px;
     text-align: center;
