--- a/src/app/posts/[slug]/singlePage.module.css
+++ b/src/app/posts/[slug]/singlePage.module.css
@@ -11,6 +11,36 @@
     margin-top: 50px;
 }
 
+
+.avatar {
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.user{
+    display: flex;
+    align-items: center;
+    gap: 9px;
+}
+.userTextContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.userImageContainer{
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+
+
+.avatar {
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .title {
     margin-top: 20px;
     margin-bottom: 50px;
@@ -92,7 +122,11 @@
 
 .post {
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 0px;
+}
+.solid {
+    border-top: .10px dotted grey;
+    margin: 10px 0 70px 0;
 }
 
 .description {
@@ -101,6 +135,138 @@
     font-weight: 300;
     line-height: 1.6em;
     font-size: 15.9px;
+}
+
+.container {
+
+}
+
+.infoContainer {
+    align-items: center;
+    gap: 50px;
+}
+
+.textContainer {
+    margin-top: 50px;
+}
+
+.title {
+    margin-top: 20px;
+    margin-bottom: 50px;
+    font-size: 45px;
+}
+
+.user{
+    display: flex;
+    align-items: center;
+    gap: 9px;
+}
+
+.userImageContainer{
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+.avatar {
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.userTextContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.back {
+    cursor: pointer;
+    display: flex;
+    color: var(--textColor2);
+    font-size: 13px;
+    letter-spacing: initial;
+    text-weight: 400;
+}
+
+.baack {
+    cursor: pointer;
+    margin-top: 4px;
+    font-size: 15px;
+    gap: 4px;
+}
+
+.back:hover {
+    color: var(--textColor);
+
+}
+
+.top {
+    margin: 10px;
+}
+
+.lin {
+    color: var(--textColor2);
+    font-size: 12px;
+}
+
+.date {
+    margin-top: 50px;
+    color: var(--textColor2);
+    font-size: 14px;
+    letter-spacing: initial;
+    text-weight: 400;
+}
+
+.imageContainer {
+    height: 350px;
+    width: 400px;
+    display: flex;
+    position: relative;
+    margin-top: 50px;
+}
+
+.image{
+    object-fit: cover;
+}
+
+.description {
+    color: var(--newTextColor);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    line-height: 1.6em;
+    font-size: 15.9px;
+}
+
+
+@media screen and (max-width: 640px) {
+    .title {
+        font-size: 35px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 37px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 40px;
+    }
+}
+
+@media screen and (width: 1024px) {
+    .title {
+        font-size: 42px;
+    }
+}
+
+@media screen and (width: 1136px) {
+    .title {
+        font-size: 43px;
+    }
 }
 
 
