--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -32,8 +32,8 @@
 }
 
 .button {
-    color: var(--textColor);
-    background-color: var(--softBg);
+    color: white;
+    background-color: #1F273AFF;
     padding: 8px 16px;
     text-decoration: none;
     transition: background-color .3s;
