--- a/src/components/copyright/copyright.module.css
+++ b/src/components/copyright/copyright.module.css
@@ -1,5 +1,5 @@
 .text {
     text-align: center;
-    font-size: 15px;
-    color: var(--textColor2)
+    font-size: 10px;
+    color: var(--textColor2);
 }
